<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/map_label"/>    
    
    <item
        android:id="@+id/directions"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/directions_label"/>

    <item
        android:id="@+id/login"
        android:alphabeticShortcut="@string/login_shortcut"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/login_label"/>

    <item
        android:id="@+id/logout"
        android:alphabeticShortcut="@string/login_shortcut"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/logout_label"/>
    
    
    <item
        android:id="@+id/settings"
        android:alphabeticShortcut="@string/settings_shortcut"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_label"/>

</menu>